updated to apache commons math 2.0
git-svn-id: https://dev.geogebra.org/svn/trunk/geogebra@3984 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e