@@ -17,19 +17,19 @@
 
 package org.apache.commons.math.random;
 
-import java.io.EOFException;
-import java.io.Serializable;
 import java.io.BufferedReader;
-import java.io.FileReader;
 import java.io.File;
+import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.io.Serializable;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.apache.commons.math.stat.descriptive.SummaryStatistics;
+import org.apache.commons.math.MathRuntimeException;
 import org.apache.commons.math.stat.descriptive.StatisticalSummary;
+import org.apache.commons.math.stat.descriptive.SummaryStatistics;
 
 /**
  * Implements <code>EmpiricalDistribution</code> interface.  This implementation
@@ -56,15 +56,15 @@ import org.apache.commons.math.stat.descriptive.StatisticalSummary;
  *    entry per line.</li>
  * </ul></p>
  *
- * @version $Revision: 1.1 $ $Date: 2009-07-06 21:31:46 $
+ * @version $Revision: 1.2 $ $Date: 2009-08-09 07:40:12 $
  */
 public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistribution {
 
     /** Serializable version identifier */
-    private static final long serialVersionUID = -6773236347582113490L;
+    private static final long serialVersionUID = 5729073523949762654L;
 
     /** List of SummaryStatistics objects characterizing the bins */
-    private ArrayList binStats = null;
+    private List<SummaryStatistics> binStats = null;
 
     /** Sample statistics */
     private SummaryStatistics sampleStats = null;
@@ -85,7 +85,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
      * Creates a new EmpiricalDistribution with the default bin count.
      */
     public EmpiricalDistributionImpl() {
-        binStats = new ArrayList();
+        binStats = new ArrayList<SummaryStatistics>();
     }
 
     /**
@@ -95,7 +95,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
      */
     public EmpiricalDistributionImpl(int binCount) {
         this.binCount = binCount;
-        binStats = new ArrayList();
+        binStats = new ArrayList<SummaryStatistics>();
     }
 
      /**
@@ -110,7 +110,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
             da.computeStats();
             fillBinStats(in);
         } catch (Exception e) {
-            throw new RuntimeException(e.getMessage());
+            throw new MathRuntimeException(e);
         }
         loaded = true;
 
@@ -129,22 +129,27 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
             DataAdapter da = new StreamDataAdapter(in);
             try {
                 da.computeStats();
+            } catch (IOException ioe) {
+                // don't wrap exceptions which are already IOException
+                throw ioe;
+            } catch (RuntimeException rte) {
+                // don't wrap RuntimeExceptions
+                throw rte;
             } catch (Exception e) {
-                throw new IOException(e.getMessage());
+                throw MathRuntimeException.createIOException(e);
             }
             if (sampleStats.getN() == 0) {
-                throw new EOFException("URL " + url + " contains no data");
+                throw MathRuntimeException.createEOFException("URL {0} contains no data",
+                                                              url);
             }
             in = new BufferedReader(new InputStreamReader(url.openStream()));
             fillBinStats(in);
             loaded = true;
         } finally {
-           if (in != null) {
-               try {
-                   in.close();
-               } catch (Exception ex) {
-                   // ignore
-               }
+           try {
+               in.close();
+           } catch (IOException ex) {
+               // ignore
            }
         }
     }
@@ -161,19 +166,23 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
             DataAdapter da = new StreamDataAdapter(in);
             try {
                 da.computeStats();
+            } catch (IOException ioe) {
+                // don't wrap exceptions which are already IOException
+                throw ioe;
+            } catch (RuntimeException rte) {
+                // don't wrap RuntimeExceptions
+                throw rte;
             } catch (Exception e) {
-                throw new IOException(e.getMessage());
+                throw MathRuntimeException.createIOException(e);
             }
             in = new BufferedReader(new FileReader(file));
             fillBinStats(in);
             loaded = true;
         } finally {
-            if (in != null) {
-                try {
-                    in.close();
-                } catch (Exception ex) {
-                    // ignore
-                }
+            try {
+                in.close();
+            } catch (IOException ex) {
+                // ignore
             }
         }
     }
@@ -219,8 +228,11 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
                 double[] inputArray = (double[]) in;
                 return new ArrayDataAdapter(inputArray);
             } else {
-                throw new IllegalArgumentException(
-                    "Input data comes from the" + " unsupported source");
+                throw MathRuntimeException.createIllegalArgumentException(
+                      "input data comes from unsupported datasource: {0}, " +
+                      "supported sources: {1}, {2}",
+                      in.getClass().getName(),
+                      BufferedReader.class.getName(), double[].class.getName());
             }
         }
     }
@@ -248,14 +260,14 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
          * @param delta  grid size
          * @throws IOException if an IO error occurs
          */
+        @Override
         public void computeBinStats(double min, double delta)
                 throws IOException {
             String str = null;
             double val = 0.0d;
             while ((str = inputStream.readLine()) != null) {
                 val = Double.parseDouble(str);
-                SummaryStatistics stats =
-                    (SummaryStatistics) binStats.get(findBin(min, val, delta));
+                SummaryStatistics stats = binStats.get(findBin(min, val, delta));
                 stats.addValue(val);
             }
 
@@ -267,12 +279,13 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
          * 
          * @throws IOException if an IOError occurs
          */
+        @Override
         public void computeStats() throws IOException {
             String str = null;
             double val = 0.0;
             sampleStats = new SummaryStatistics();
             while ((str = inputStream.readLine()) != null) {
-                val = new Double(str).doubleValue();
+                val = Double.valueOf(str).doubleValue();
                 sampleStats.addValue(val);
             }
             inputStream.close();
@@ -302,6 +315,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
          * 
          * @throws IOException if an IO error occurs
          */
+        @Override
         public void computeStats() throws IOException {
             sampleStats = new SummaryStatistics();
             for (int i = 0; i < inputArray.length; i++) {
@@ -315,12 +329,12 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
          * @param delta  grid size
          * @throws IOException  if an IO error occurs
          */
+        @Override
         public void computeBinStats(double min, double delta)
             throws IOException {
             for (int i = 0; i < inputArray.length; i++) {
                 SummaryStatistics stats =
-                    (SummaryStatistics) binStats.get(
-                            findBin(min, inputArray[i], delta));
+                    binStats.get(findBin(min, inputArray[i], delta));
                 stats.addValue(inputArray[i]);
             }
         }
@@ -336,7 +350,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
         // Load array of bin upper bounds -- evenly spaced from min - max
         double min = sampleStats.getMin();
         double max = sampleStats.getMax();
-        double delta = (max - min)/(new Double(binCount)).doubleValue();
+        double delta = (max - min)/(Double.valueOf(binCount)).doubleValue();
         double[] binUpperBounds = new double[binCount];
         binUpperBounds[0] = min + delta;
         for (int i = 1; i< binCount - 1; i++) {
@@ -358,23 +372,23 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
         DataAdapter da = aFactory.getAdapter(in);
         try {
             da.computeBinStats(min, delta);
+        } catch (IOException ioe) {
+            // don't wrap exceptions which are already IOException
+            throw ioe;
+        } catch (RuntimeException rte) {
+            // don't wrap RuntimeExceptions
+            throw rte;
         } catch (Exception e) {
-            if(e instanceof RuntimeException){
-                throw new RuntimeException(e.getMessage());
-            }else{
-                throw new IOException(e.getMessage());
-            }
+            throw MathRuntimeException.createIOException(e);
         }
 
         // Assign upperBounds based on bin counts
         upperBounds = new double[binCount];
         upperBounds[0] =
-        ((double)((SummaryStatistics)binStats.get(0)).getN())/
-        (double)sampleStats.getN();
+        ((double) binStats.get(0).getN()) / (double) sampleStats.getN();
         for (int i = 1; i < binCount-1; i++) {
             upperBounds[i] = upperBounds[i-1] +
-            ((double)((SummaryStatistics)binStats.get(i)).getN())/
-            (double)sampleStats.getN();
+            ((double) binStats.get(i).getN()) / (double) sampleStats.getN();
         }
         upperBounds[binCount-1] = 1.0d;
     }
@@ -402,7 +416,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
     public double getNextValue() throws IllegalStateException {
 
         if (!loaded) {
-            throw new IllegalStateException("distribution not loaded");
+            throw MathRuntimeException.createIllegalStateException("distribution not loaded");
         }
 
         // Start with a uniformly distributed random number in (0,1)
@@ -411,7 +425,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
         // Use this to select the bin and generate a Gaussian within the bin
         for (int i = 0; i < binCount; i++) {
            if (x <= upperBounds[i]) {
-               SummaryStatistics stats = (SummaryStatistics)binStats.get(i);
+               SummaryStatistics stats = binStats.get(i);
                if (stats.getN() > 0) {
                    if (stats.getStandardDeviation() > 0) {  // more than one obs
                         return randomData.nextGaussian
@@ -422,7 +436,7 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
                }
            }
         }
-        throw new RuntimeException("No bin selected");
+        throw new MathRuntimeException("no bin selected");
     }
 
     /**
@@ -447,13 +461,13 @@ public class EmpiricalDistributionImpl implements Serializable, EmpiricalDistrib
     }
 
     /**
-     * Returns an ArrayList of {@link SummaryStatistics} instances containing
-     * statistics describing the values in each of the bins.  The ArrayList is
+     * Returns a List of {@link SummaryStatistics} instances containing
+     * statistics describing the values in each of the bins.  The list is
      * indexed on the bin number.
      * 
      * @return List of bin statistics.
      */
-    public List getBinStats() {
+    public List<SummaryStatistics> getBinStats() {
         return binStats;
     }
 
